--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:padding="10dp"
-    tools:context=".ui.main.view.fragment.HomeFragment">
+    tools:context=".ui.main.home.HomeFragment">
 
 
     <TextView
