--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E64A19"
-    tools:context=".ui.main.view.fragment.SearchFragment">
+    tools:context=".ui.main.search.SearchFragment">
 
 
 </FrameLayout>
