--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -21,7 +21,7 @@
 
     <fragment
         android:id="@+id/searchFragment"
-        android:name="com.tarikul.sampleproject.ui.main.view.fragment.SearchFragment"
+        android:name="com.tarikul.sampleproject.ui.main.search.SearchFragment"
         android:label="fragment_search"
         tools:layout="@layout/fragment_search" />
     <fragment
@@ -31,12 +31,12 @@
         tools:layout="@layout/fragment_movie" />
     <fragment
         android:id="@+id/profileFragment"
-        android:name="com.tarikul.sampleproject.ui.main.view.fragment.ProfileFragment"
+        android:name="com.tarikul.sampleproject.ui.main.profile.ProfileFragment"
         android:label="fragment_profile"
         tools:layout="@layout/fragment_profile" />
     <fragment
         android:id="@+id/moviesFragment"
-        android:name="com.tarikul.sampleproject.ui.main.view.fragment.MoviesFragment"
+        android:name="com.tarikul.sampleproject.ui.main.list.MoviesFragment"
         android:label="fragment_movies"
         tools:layout="@layout/fragment_movies">
 
